<resources>
    <string name="cb_app_name">电子会员卡</string>
    <string name="cb_content_desc_manage_card">管理卡片</string>
    <string name="cb_content_desc_use_card">使用卡片</string>
    <string name="cb_menu_text_card_edit_finish">完成</string>
    <string name="cb_card_not_found_notice">没有找到您的卡?\n+ 添加新卡</string>
    <string name="cb_bar_code_place_holder">xxxx xxxx xxxx x</string>
    <string name="cb_please_input_card_name_hint">输入卡片名称</string>
    <string name="cb_title_card_edit_edit">编辑卡片</string>
    <string name="cb_title_card_edit_add">添加卡片</string>
    <string name="cb_card_edit_cover_modify_card_front">修改卡正面</string>
    <string name="cb_card_edit_cover_modify_card_back">修改卡背面</string>
    <string name="cb_card_edit_cover_modify_bar_code">点击扫描条形码</string>
    <string name="cb_save_photo_failed">保存图片失败,请确认是否授权读写存储卡的权限以及存储卡是否正确挂载</string>
    <string name="cb_crop_picture_failed">图片裁剪失败</string>
    <string name="cb_title_card_my">我的卡片</string>
    <string name="cb_title_card_search">搜索卡片</string>
    <string name="cb_hello_world">Hello world!</string>
    <string name="cb_title_card_show">使用卡片</string>
    <string name="cb_menu_card_show_edit">编辑</string>
    <string name="cb_tip_no_card">你还没有卡片\n点击右下角 + 进行添加</string>
    <string name="cb_card_show_no_card_data_notice">没有卡片数据,请先在管理卡片中进行添加</string>
    <string name="cb_menu_card_my_list">列表</string>
    <string name="cb_menu_card_my_icon">图标</string>
    <string name="cb_menu_card_my_delete">删除</string>
    <string name="event_name_save_card_success">点击完成菜单成功保存卡片</string>
    <string name="hint_et_search_card_name">请输入卡片名称</string>
    <string name="cb_card_edit_img_content_desc">CardImage</string>
    <string name="cb_toast_card_edit_card_name_empty">请输入卡片名称</string>
    <string name="cb_toast_card_edit_bar_code_non">请先扫描条形码</string>
    <string name="cb_action_bar_up_description">转到上一层</string>
    <string name="toast_card_my_no_card_be_deleted">没有删除任何卡片</string>

...
