<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/cbBackground"
    android:fitsSystemWindows="true"
    tools:context="com.wonders.xlab.cardbag.ui.cardmy.CardMyActivity">

    <com.wonders.xlab.cardbag.widget.XToolBarLayout
        android:id="@+id/xtbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/XToolBarLayout"
        app:xtblTitleText="@string/cb_title_card_my"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/xtbl"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/xtbl"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fab_margin_horizontal"
        android:layout_marginRight="@dimen/fab_margin_horizontal"
        android:clickable="true"
        android:src="@drawable/ic_fab_add"/>

    <com.wonders.xlab.cardbag.widget.SideBar
        android:id="@+id/side_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/iv_add"
        android:layout_below="@+id/xtbl"
        android:visibility="gone"/>
</RelativeLayout>
